--- a/Sections/Company.tex
+++ b/Sections/Company.tex
@@ -4,13 +4,13 @@
 \subsection{Įmonės veiklos sritis}
 
 
-\enquote{Bentley Systems} yra inovatyvi, pasaulinė programinės įrangos sprendimų, pritaikytų inžinerijos, architektūros, statybos ir infrastruktūros sektoriams, įmonė. Įmonė įkurta 1984 m. amerikiečių brolių Bentley'ų, šiuo metu bendrovė išsiplėtusi į 50 šalių. Lietuvoje filialas „Bentley Systems Europe B.V“ atidarytas 2005 metais. 2015 metais įmonė išsiplėtė Lietuvoje ir buvo atidarytas antras filialas Kaune. Ši įmonė kuria įvairias su modeliavimu susijusias programas (\emph{angl. CAD Modeling and Visualization}) kaip AssetWise, ProjectWise MicroStation, taip pat ir skaitmeninių dvynių (\emph{angl. digital twins}) technologijas, skirtas realaus pasaulio objektų ir procesų virtualiems atvaizdams kurti. Skaitmeniniai dvyniai padeda geriau suprasti, valdyti ir optimizuoti infrastruktūros projektus, taip pat pagerinti jų efektyvumą ir tvarumą.
+\enquote{Bentley Systems} yra inovatyvi, pasaulinė programinės įrangos sprendimų, pritaikytų inžinerijos, architektūros, statybos ir infrastruktūros sektoriams, įmonė. Įmonė įkurta 1984 m. amerikiečių brolių Bentley'ų, šiuo metu bendrovė išsiplėtusi į 50 šalių. Lietuvoje filialas „Bentley Systems Europe B.V“ atidarytas 2005 metais. 2015 metais įmonė išsiplėtė Lietuvoje ir buvo atidarytas antras filialas Kaune. Ši įmonė kuria įvairias su modeliavimu susijusias programas (\emph{angl. CAD Modeling and Visualization}) kaip AssetWise, ProjectWise, MicroStation, taip pat ir skaitmeninių dvynių (\emph{angl. digital twins}) technologijas, skirtas realaus pasaulio objektų ir procesų virtualiems atvaizdams kurti. Skaitmeniniai dvyniai padeda geriau suprasti, valdyti ir optimizuoti infrastruktūros projektus, taip pat pagerinti jų efektyvumą ir tvarumą.
 
 \subsection{Įmonės organizacinė struktūra}
 Šiuo metu organizacija turi daugiau nei 250 pilnu etatu dirbančių darbuotojų Lietuvoje, taip pat įmonė įsikūrusi JAV, Kanadoje, Brazilijoje, Australijoje ir kitose šalyse. Organizacija yra projektinės struktūros - siūlomos įvairios paslaugos, kurių kūrimui ir tobulinimui yra atsakingos komandos įvairiose šalyse, dirbančios pagal Scrum ar Kanban projektų valdymo metodą. Lietuvoje esančios komandos yra tarptautinės, turinčios darbuotojų užsienio šalyse. Komandas dažniausiai sudaro programuotojai, testuotojai, dizaineriai.
 
 \subsection{Įmonės sudarytos darbo sąlygos}
-\enquote{Bentley systems} suteikia galimybę dirbti prie didelės kodo bazės projektų. Gavus praktikos vietą, praktikantas yra priskiriamas 3 mėnesiams dirbti prie vieno projekto pilnu etatu (jei dirbama pusę etato - praktika trunka 6 mėnesius). \enquote{Bentley systems} suteikia galimybę dirbti prie įvairių technologijų. Gavus darbo vietą prie \textit{frontend} projekto, dažniausiai naudojama React programavimo karkasas kartu su TypeScript programavimo kalba, \textit{backend}, projektai parašyti C++ ir C\# programavimo kalbomis, kuriant mobiliasias programėles, naudojama Kotlin ir Swift programavimo kalbos Android ir iOS prietaisams. Pateikti paraiškas dėl praktikos vietos galima bet kuriuo metu, dažniausiai praktikantai ieškomi Vasario, Gegužės mėnesiais.
+\enquote{Bentley systems} suteikia galimybę dirbti prie didelės kodo bazės projektų. Gavus praktikos vietą, praktikantas yra priskiriamas 3 mėnesiams dirbti prie vieno projekto pilnu etatu (jei dirbama pusę etato - praktika trunka 6 mėnesius). \enquote{Bentley systems} suteikia galimybę dirbti prie įvairių technologijų. Gavus darbo vietą prie \textit{frontend} projekto, dažniausiai naudojama React programavimo karkasas kartu su TypeScript programavimo kalba, \textit{backend}, projektai parašyti C++ ir C\# programavimo kalbomis, kuriant mobiliąsias programėles, naudojama Kotlin ir Swift programavimo kalbos Android ir iOS prietaisams. Pateikti paraiškas dėl praktikos vietos galima bet kuriuo metu, dažniausiai praktikantai ieškomi Vasario, Gegužės mėnesiais.
 
 Kiekvienam praktikantui priskiriamas mentorius, dirbantis prie praktikantui priskirto projekto. Mentorius užima aukštesnę nei jaunesniojo programuotojo poziciją. Mentorius padėdavo kilus klausimams, peržiūrėjo programinio kodo pakeitimus, pateikdavo pasiūlymus, kaip galima toliau tobulėti.
 
