--- a/Sections/Technologies.tex
+++ b/Sections/Technologies.tex
@@ -2,10 +2,7 @@
 
 \subsection{Praktikos metu naudotos technologijos}
 Šiame poskyryje aprašomos technologijos, kurias naudojau praktikos metu ir pavyzdžiai, kur jos buvo naudojamos. 
-Atlikdamas praktiką mobiliųjų įrenginių kūrimo komandoje turėjau galimybę dirbti su įvairiomis pripažintomis ir naujausiomis technologijomis. Toliau aprašoma pagrindinių \enquote{Android} ir \enquote{iOS} technologijų, kuriomis naudojausi, apžvalga:
-
-Jetpack Compose yra modernus Google vartotojo sąsajų priemonių rinkinys, skirtas Android taikomųjų programų vartotojo sąsajoms kurti. Jame naudojamas deklaratyvusis metodas, kai kūrėjai aprašo norimą naudotojo sąsajos būseną, o ne tai, kaip ją pasiekti žingsnis po žingsnio. Taikant šį požiūrį kodas gali būti glaustesnis ir lengviau suprantamas.  "Jetpack Compose" naudoja "Kotlin" galimybes, todėl kūrėjai gali kurti vartotojo sąsajos komponentus kaip funkcijas.  Tai gali pagerinti kodo skaitomumą ir palaikymą.
-
+Atlikdamas praktiką mobiliųjų įrenginių kūrimo komandoje turėjau galimybę dirbti su įvairiomis pripažintomis ir naujausiomis mobiliųjų programėlių kūrimo technologijomis. Toliau aprašoma pagrindinių \enquote{Android} ir \enquote{iOS} technologijų, kuriomis naudojausi, apžvalga:
 
 \subsubsection{Kotlin}
 Kotlin yra viena iš populiariausių programavimo kalbų kuriant Android mobiliąsias programėles. Lyginant su Java programavimo kalba, Kotlin yra modernesnė, null reikšmių saugumu. Kotlin lengvai pritaikoma senesniuose projektuose, parašytuose su Java ir XML vartotojo sąsaja, paprasta atnaujinti seną kodo bazę. Sintaksės panašumas į kitas programavimo kalbas, padeda lengvai ir greita išmokti Kotlin programavimo kalbos pagrindus.
@@ -13,7 +10,8 @@ Visos praktikos metu Kotlin programavimo kalbą naudojau kurti naudotojo sąsajo
 
 \subsubsection{Jetpack Compose}
 
-"Jetpack Compose" yra Android rekomenduojamas modernus įrankių rinkinys, skirtas vietinei vartotojo sąsajai kurti. Rinkinys supaprastina ir pagreitina Android mobiliųjų programėlių vartotojo sąsajos kūrimą. Jame taikomas deklaratyvus metodas,
+\enquote{Jetpack Compose} yra Android rekomenduojamas modernus įrankių rinkinys, skirtas vartotojo sąsajai kurti. Rinkinys supaprastina ir pagreitina Android mobiliųjų programėlių vartotojo sąsajos kūrimą. Šiame karkase vartotojo sąsaja konstruojama deklaratyviai. Taikant šią paradigmą kodas gali būti glaustesnis ir lengviau suprantamas.
+
 
 % % \begin{figure}
 % %     \centering
@@ -79,4 +77,4 @@ Swift yra galinga, tačiau nesunki pradedantiesiems programavimo kalba, kurią A
 
 \subsubsection{SwiftUI}
 
-\enquote{SwiftUI} - tai naujas Apple karkasas įrenginių naudotojo sąsajų kūrimui. Skirtingai nuo storyboards sąsajų kūrimo, kuris remiasi vizualiniu komponentų dėliojimu ekrane, \enquote{SwiftUI} naudoja deklaratyvų požiūrį. Storyboards vartotojo sąsajos konvertuojamos į XML,  kas yra gana nepatogu, kai atliekamos programinio kodo pakeitimų peržiūros. Kaip ir \enquote{Jetpack compose}, \enquote{SwiftUI}, kode galima atlikti vartotojo sąsajos būsenų valdymą, deklaratyviai konstruoti vartotojo sąsają. Išbandžius abi technologijas iOS vartotojo sąsajos kūrimo technologijas, norint suprasti ir atlikti kodo pakeitimus esamame projekte, \enquote{SwiftUI} yra geresnis programavimo karkasas, suprasti kodo veikimo principus, prireiks mažiau laiko.
+\enquote{SwiftUI} - tai naujas Apple karkasas įrenginių naudotojo sąsajų kūrimui. Skirtingai nuo storyboards sąsajų kūrimo, kuris remiasi vizualiniu komponentų dėliojimu ekrane, \enquote{SwiftUI} naudoja deklaratyvų požiūrį. Storyboards vartotojo sąsajos konvertuojamos į XML,  kas yra gana nepatogu, kai atliekamos programinio kodo pakeitimų peržiūros. Kaip ir \enquote{Jetpack Compose}, \enquote{SwiftUI}, kode galima atlikti vartotojo sąsajos būsenų valdymą, deklaratyviai konstruoti vartotojo sąsają. Išbandžius abi technologijas iOS vartotojo sąsajos kūrimo technologijas, norint suprasti ir atlikti kodo pakeitimus esamame projekte, \enquote{SwiftUI} yra geresnis programavimo karkasas, suprasti kodo veikimo principus, prireiks mažiau laiko.
