--- a/internship-report.tex
+++ b/internship-report.tex
@@ -58,7 +58,7 @@
 \begin{enumerate}
     \item Įgyta patirties rašant programinį kodą Kotlin programavimo kalba.
     \item Įgyta žinių apie “Jetpack Compose” Android įrankių rinkiniu skirtu kurti vartotojo sąsają.
-    \item Lavinau darbo komandoje gebėjimus ir darbo "Kanban" projektų valdymo metodo pagalba.
+    \item Lavinau darbo komandoje gebėjimus ir darbo \enquote{Kanban} projektų valdymo metodo pagalba.
     \item Įgyta patirties rašant kodą su švaraus ir kokybiško rašymo principais ir geriausiomis praktikomis. 
     \item Įgyvendintas naujas funkcionalumas Android programėlėje.
 \end{enumerate}
@@ -66,7 +66,7 @@
 
 \textbf{Pasiūlymai įmonei}:
 \begin{enumerate}
-    \item Įmonėje, šiuo metu, į praktikos pozicijas primami tik programuotojai ir testuotojai. Būtų galima išplėsti praktikos pozicijų pasirinkimą, pridedant projektų vadovo, vartotojo sąsajos dizainerių pozicijas.
+    \item Įmonėje, šiuo metu, į praktikos pozicijas priimami tik programuotojai ir testuotojai. Būtų galima išplėsti praktikos pozicijų pasirinkimą, pridedant projektų vadovo, vartotojo sąsajos dizainerių pozicijas.
     \item Atliekant praktiką, neteko susidurti su realių programinės įrangos, funkcionalumų įvertinimo iš vartotojų pusės. Bet 2 mėnesiai, manau, yra per mažas laiko tarpas, kad įgyvendintas funkcionalumas pasiektų vartotojus.
     \item Pirmą kartą pamačius projektą, buvo nelabai aišku, koks jo pilnas funkcionalumas, didžiąją dalį funkcionalumo atradau atliekant programinio kodo pakeitimus. Galima praktikantams, prieš pradedant rašyti kodą, pristatyti projekto funkcionalumą.
 \end{enumerate}
